--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,6 @@ services:
         volumes:
             - "/etc/localtime:/etc/localtime"
         ports:
-            - 5434:5432
+            - 5432:5434
         env_file: 
-            - ./db/db_principal/.db_principal.env
-            
+            - "./db/db_principal/.db_principal.env"
