--- a/odoo/13/Dockerfile
+++ b/odoo/13/Dockerfile
@@ -1,28 +1,86 @@
-FROM odoo:13.0
+FROM debian:buster-slim
 
-USER root
-RUN mkdir /opt/odoo
-RUN apt-get update && apt-get upgrade -y
-RUN apt-get install swig git vim build-essential python3.7-dev xmlsec1 libxmlsec1  libxmlsec1-dev pkg-config openssl python-lxml libxml2-dev libxmlsec1-openssl -y
+SHELL ["/bin/bash", "-xo", "pipefail", "-c"]
 
-RUN pip3 install --upgrade pip setuptools wheel
+# Generate locale C.UTF-8 for postgres and general locale data
+ENV LANG C.UTF-8
 
-ADD ./extra/my-addons /mnt/extra-addons
-ADD ./extra/iugu-python /opt/odoo/iugu/
+# Install some deps, lessc and less-plugin-clean-css, and wkhtmltopdf
+RUN apt-get update \
+        && apt-get install -y --no-install-recommends \
+            ca-certificates \
+            curl \
+            dirmngr \
+            fonts-noto-cjk \
+            gnupg \
+            libssl-dev \
+            node-less \
+            npm \
+            python3-num2words \
+            python3-pip \
+            python3-phonenumbers \
+            python3-pyldap \
+            python3-qrcode \
+            python3-renderpm \
+            python3-setuptools \
+            python3-slugify \
+            python3-vobject \
+            python3-watchdog \
+            python3-xlrd \
+            python3-xlwt \
+            xz-utils \
+        && curl -o wkhtmltox.deb -sSL https://github.com/wkhtmltopdf/wkhtmltopdf/releases/download/0.12.5/wkhtmltox_0.12.5-1.buster_amd64.deb \
+        && echo 'ea8277df4297afc507c61122f3c349af142f31e5 wkhtmltox.deb' | sha1sum -c - \
+        && apt-get install -y --no-install-recommends ./wkhtmltox.deb \
+        && rm -rf /var/lib/apt/lists/* wkhtmltox.deb
 
-WORKDIR /opt/odoo/iugu
-# RUN find /usr -name '*.pyc' -delete
-RUN python3 setup.py install
+# install latest postgresql-client
+RUN echo 'deb http://apt.postgresql.org/pub/repos/apt/ buster-pgdg main' > /etc/apt/sources.list.d/pgdg.list \
+        && GNUPGHOME="$(mktemp -d)" \
+        && export GNUPGHOME \
+        && repokey='B97B0AFCAA1A47F044F244A07FCC7D46ACCC4CF8' \
+        && gpg --batch --keyserver keyserver.ubuntu.com --recv-keys "${repokey}" \
+        && gpg --batch --armor --export "${repokey}" > /etc/apt/trusted.gpg.d/pgdg.gpg.asc \
+        && gpgconf --kill all \
+        && rm -rf "$GNUPGHOME" \
+        && apt-get update  \
+        && apt-get install --no-install-recommends -y postgresql-client \
+        && rm -f /etc/apt/sources.list.d/pgdg.list \
+        && rm -rf /var/lib/apt/lists/*
 
-USER root
-RUN pip3 install mercadopago==1.1.1 mpmath
+# Install rtlcss (on Debian buster)
+RUN npm install -g rtlcss
 
+# Install Odoo
+ENV ODOO_VERSION 13.0
+ARG ODOO_RELEASE=20210618
+ARG ODOO_SHA=772a85f570e240254221fe3ecd977324db81e2bf
+RUN curl -o odoo.deb -sSL http://nightly.odoo.com/${ODOO_VERSION}/nightly/deb/odoo_${ODOO_VERSION}.${ODOO_RELEASE}_all.deb \
+        && echo "${ODOO_SHA} odoo.deb" | sha1sum -c - \
+        && apt-get update \
+        && apt-get -y install --no-install-recommends ./odoo.deb \
+        && rm -rf /var/lib/apt/lists/* odoo.deb
+
+# Copy entrypoint script and Odoo configuration file
+COPY ./entrypoint.sh /
+COPY ./odoo.conf /etc/odoo/
+
+# Set permissions and Mount /var/lib/odoo to allow restoring filestore and /mnt/extra-addons for users addons
+RUN chown odoo /etc/odoo/odoo.conf \
+    && mkdir -p /mnt/extra-addons \
+    && chown -R odoo /mnt/extra-addons
+VOLUME ["/var/lib/odoo", "/mnt/extra-addons"]
+
+# Expose Odoo services
+EXPOSE 8069 8071 8072
+
+# Set the default config file
+ENV ODOO_RC /etc/odoo/odoo.conf
+
+COPY wait-for-psql.py /usr/local/bin/wait-for-psql.py
+
+# Set default user when running the container
 USER odoo
-WORKDIR /mnt/extra-addons
 
-RUN pip3 install -r requirements-accout.txt
-RUN pip3 install -r requirements-l10.txt
-RUN pip3 install xmlsec --trusted-host --extra-index-url=https://hoefling.io/pypi/
-
-COPY ./odoo.conf /etc/odoo/odoo.conf
-EXPOSE 8069
+ENTRYPOINT ["/entrypoint.sh"]
+CMD ["odoo"]
