--- a/odoo.conf
+++ b/odoo.conf
@@ -1,12 +1,12 @@
 [options]
-addons_path = /mnt/extra-addons
+addons_path = /mnt/extra-addons,/opt/odoo/odoo13/odoo-brasil-13.0
 data_dir = /var/lib/odoo
 admin_passwd = admin
 auto_reload = False
 csv_internal_sep = ,
 db_host = db_principal
 db_maxconn = 64
-db_name = db0-inovar
+db_name = db0-13
 db_port = 5432
 db_template = template0
 db_user = postgres_user
