--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
     # Subindo stancia odoo
     odoo-server:
-        build: .
+        image: cleytonflb/inodoo130:0.1
         ports:
             - 80:8069
         depends_on: 
